finish layout TODO: fix title on mobile

--- a/styles/generic.css
+++ b/styles/generic.css
@@ -48,8 +48,10 @@ a:focus {
 }
 
 section {
-  height: 100%;
-  width: 100%;
+  height: auto;
+  width: auto;
 }
 
 
+/* @media(min-width:768px) { */
+/*   section */
