--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,3 +1,7 @@
+#hero-main {
+  height: 100%;
+}
+
 .hero-container {
   height: 100%;
   width: 100%;
@@ -28,6 +32,7 @@
   padding-top: 20%;
   padding-left: 15px;
   padding-right: 15px;
+  margin-bottom: 20px;
 }
 
 .header-hero .header-hero-title {
@@ -55,7 +60,7 @@
   font-weight: 300;
   background-color: #5c1ab7;
   width: 150px;
-  height: 35px;
+  height: 45px;
   position: relative;
 }
 .header-cta .header-cta-button:hover {
